assets/css/custom.css
@import "manni.css";

html,
body {
    max-width: 720px;
    margin: auto;
}

.highlight {
    margin-bottom: 20px;
}

.embed-container {
    position: relative;
    padding-bottom: 56.25%;
    /* 16:9 aspect ratio */
    height: 0;
    overflow: hidden;
    max-width: 100%;
    background: #000;
}

.embed-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
}

